CI: enable openarc, and also build a minimal version

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Build simta
         run: |
           autoreconf -fiv
-          CFLAGS='-Wall -Werror -fprofile-arcs -ftest-coverage' ./configure --with-cmocka
+          CFLAGS='-Wall -Werror -fprofile-arcs -ftest-coverage' ./configure --with-arc --with-cmocka
           make -j4
         working-directory: ${{ github.workspace }}/simta
 
@@ -103,6 +103,13 @@ jobs:
       - name: Build simta with clang
         run: |
           make distclean
-          CC=clang CFLAGS='-Wall -Werror' ./configure
+          CC=clang CFLAGS='-Wall -Werror' ./configure --with-arc
+          make -j4
+        working-directory: ${{ github.workspace }}/simta
+
+      - name: Build minimal simta
+        run: |
+          make distclean
+          CC=clang CFLAGS='-Wall -Werror' ./configure --without-dkim --without-arc --without-sasl --without-ssl --without-libidn2 --without-jemalloc --without-ldap --without-libwrap --without-lmdb
           make -j4
         working-directory: ${{ github.workspace }}/simta
