rework alias config

--- a/simta.conf
+++ b/simta.conf
@@ -384,7 +384,7 @@ defaults {
             #subaddress_separators = "+";
         }
         alias {
-            path = /etc/aliases.db;
+            path = /etc/aliases;
         }
         password {
             path = /etc/passwd;
