Replumb receive timeouts

--- a/simta.conf
+++ b/simta.conf
@@ -80,7 +80,6 @@ receive {
     #   127.0.0.4 = accept
     #}
 
-
     connection {
         limits {
             global {
@@ -144,6 +143,16 @@ receive {
         ciphers = "EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:DH+CHACHA20:DH+AES128:DH+AES256:!MD5";
         #ports = [ 465 ]
         client_cert = false;
+    }
+
+    timeout {
+        session = 1d;
+        tls = 5min;
+        inactivity = 1h;
+        write = 5min;
+        command = 5min;
+        data = 1h;
+        data_line = 5min;
     }
 
     srs {
@@ -264,7 +273,7 @@ receive {
         # this number of messages (0 is unlimited)...
         aggression = 50;
         # ...or this amount of time has gone by with no new mail transactions.
-        timer = -1;
+        timer = 5s;
     }
 }
 
@@ -284,11 +293,11 @@ deliver {
         #key = /path/to/key
     }
     timeout {
-        tls = 5m;
-        command = 5m;
-        data_session = 30m;
-        data_line = 5m;
-        fast_data_session = 5m;
+        tls = 5min;
+        command = 5min;
+        data_session = 30min;
+        data_line = 5min;
+        fast_data_session = 5min;
         fast_data_line = 60s;
     }
     # If set, simta will inject a SIMTA-Seen-Before trace header into
@@ -518,18 +527,6 @@ domain "localhost.DEFAULT" {
 #
 #}
 
-
-# Timeouts
-#
-# These variables set specific timeouts for various parts of the mail
-# transaction.
-#
-#RECEIVE_GLOBAL_SESSION_TIMEOUT 0
-#RECEIVE_TLS_ACCEPT_TIMEOUT 300
-#RECEIVE_COMMAND_INACTIVITY_TIMEOUT 3600
-#RECEIVE_COMMAND_LINE_TIMEOUT 600
-#RECEIVE_DATA_SESSION_TIMEOUT 3600
-#RECEIVE_DATA_LINE_TIMEOUT 300
 
 # SMTP_LISTEN_BACKLOG <max>
 #
