Replumb simta_max_message_size

--- a/simta.conf
+++ b/simta.conf
@@ -241,7 +241,7 @@ receive {
             # terminate trivial mail loops.
             received_headers = 80;
             # Maximum message size.
-            message_size = -1;
+            message_size = 100mb;
         }
 
         checksum {
