Replumb connection limits

--- a/simta.conf
+++ b/simta.conf
@@ -82,17 +82,14 @@ receive {
 
     connection {
         limits {
-            global {
-                # Maximum number of connections
-                connections = 0;
-                # Maximum number of connections per throttle_interval
-                throttle = 0;
-            }
-            per_host {
-                connections = 0;
-                throttle = 0;
-            }
+            # Maximum number of connections
+            global = 2k;
+            # Maximum number of new connections per throttle_interval
+            throttle = 1k;
             throttle_interval = 1s;
+            # Per-host limits
+            per_host = 100;
+            per_host_throttle = 100;
         }
 
         # Enable PROXY protocol
