Replumb child limits

--- a/simta.conf
+++ b/simta.conf
@@ -271,6 +271,9 @@ receive {
         aggression = 50;
         # ...or this amount of time has gone by with no new mail transactions.
         timer = 5s;
+        # the number of concurrent deliver children a single receive process can
+        # launch
+        max_runners = 5;
     }
 }
 
@@ -282,6 +285,10 @@ expand {
 
 
 deliver {
+    limits {
+        slow_runners = 250;
+        local_runners = 25;
+    }
     jail {
         #host = jail.mail.example.com;
         # alternate recipient for bounces of old jailed messages
@@ -331,9 +338,10 @@ defaults {
             connection {
                 # Keep reconnecting to MX entries that accepted at least one message.
                 aggressive = true;
-                max_messages = 0;
+                # Maximum number of messages to attempt per connection
+                max_messages = 10k;
                 # Maximum number of recipients to attempt per message transaction.
-                 max_rcpts = 0;
+                max_rcpts = 0;
             }
 
             queue {
@@ -524,13 +532,6 @@ domain "localhost.DEFAULT" {
 #
 #}
 
-
-# Child process limits
-#
-#MAX_Q_RUNNERS_LAUNCH 10
-#MAX_Q_RUNNERS_SLOW 250
-#MAX_Q_RUNNERS_LOCAL 25
-#MAX_Q_RUNNERS_RECEIVE 0
 
 # Miscellaneous settings that are hopefully useful for JAIL
 #
