config: realign some defaults with production config

--- a/simta.conf
+++ b/simta.conf
@@ -11,8 +11,8 @@ core {
     # User to change to after startup
     user = simta;
     tls {
+        ca_file = /etc/pki/tls/certs/ca-bundle.crt;
         # ca_directory = /path/to/dir;
-        # ca_file = /path/to/file;
     }
     # Domain to use for locally generated mail. Defaults to the system
     # hostname.
@@ -27,7 +27,7 @@ core {
     #
     # Enable statsd logging
     statsd {
-        enabled = false;
+        enabled = true;
         host = 127.0.0.1;
         port = 8125;
         prefix = simta;
@@ -110,7 +110,7 @@ receive {
             # <STRICT|RELAXED|CHILLAXED>
             # RELAXED allows connections with invalid rDNS, CHILLAXED also allows
             # connections with DNS errors during rDNS lookup.
-            check = strict;
+            check = relaxed;
             message = denied by local policy;
         }
 
@@ -123,8 +123,8 @@ receive {
         # dns_lists []
 
         banner {
-            delay: 0s;
-            punish_writes: false;
+            delay = 0s;
+            punish_writes = false;
         }
     }
 
@@ -151,9 +151,9 @@ receive {
     }
 
     timeout {
-        session = 1d;
+        session = 1h;
         tls = 5min;
-        inactivity = 1h;
+        inactivity = 10min;
         write = 5min;
         command = 5min;
         data = 1h;
@@ -250,7 +250,7 @@ receive {
         }
 
         checksum {
-            enabled = false;
+            enabled = true;
             # Which digest algorithms are available depends on your TLS
             # library's configuration.
             algorithm = sha1;
@@ -290,7 +290,6 @@ expand {
     # making a delivery attempt.
     aggressive = true;
 }
-
 
 deliver {
     limits {
@@ -390,10 +389,10 @@ defaults {
             # after it. E.g. if this is set to '+' the address
             # 'junk+foo@example.com' will be treated as an alias of
             # 'junk@example.com'.
-            #subaddress_separators = "+";
+            subaddress_separators = "+";
         }
         alias {
-            path = /etc/aliases;
+            path = /etc/mail/aliases;
         }
         password {
             path = /etc/passwd;
