--- a/test/files/test_simta_proxy.py.conf
+++ b/test/files/test_simta_proxy.py.conf
@@ -3,6 +3,10 @@ receive connection proxy {
     timeout = 2s
 }
 
+receive connection rdns {
+    check = strict;
+}
+
 defaults red deliver bitbucket {
     enabled = true
 }
