s/dns_lists/dns_list/

--- a/simta.conf
+++ b/simta.conf
@@ -120,7 +120,7 @@ receive {
         }
 
         # DNSxLs to apply to all inbound connections
-        # dns_lists []
+        # dns_list []
 
         banner {
             delay = 0s;
@@ -209,7 +209,7 @@ receive {
             #domain = example.com;
         }
         authz {
-            #dns_lists = [];
+            #dns_list [];
         }
         results {
             # Controls whether an RFC 7001 Authentication-Results header is
@@ -227,14 +227,14 @@ receive {
         max_failures = 0;
         # Any DNS lists configured here will also be checked against the
         # RFC5322.From during the content filtering phase.
-        #dns_lists []
+        #dns_list []
     }
 
     rcpt_to {
         # These lists apply to the connecting IP, but require user opt-in
         # so they can't be checked until we know the recipient. This is
         # currently only supported for LDAP users.
-        #dns_lists []
+        #dns_list []
         # Number of rejected RCPT commands before punishment begins. 0 is
         # unlimited.
         max_failures = 0;
@@ -263,7 +263,7 @@ receive {
             when = untrusted;
             message = denied by local policy;
             # FIXME: this should be implemented
-            #dns_lists []
+            #dns_list []
         }
     }
 
