--- a/test/files/test_dnsbl_logonly.conf
+++ b/test/files/test_dnsbl_logonly.conf
@@ -1,5 +1,5 @@
 receive connection {
-    dns_lists [
+    dns_list [
         {
             action = log_only;
             list = normal.dnsl.test
