config: Use a UCL variable instead of clunky manipulation

--- a/simta.conf
+++ b/simta.conf
@@ -1,6 +1,9 @@
 #
 # simta.conf template
 #
+# The following variables are available:
+# $HOSTNAME - the system hostname
+
 core {
     # Base directory for simta queues and queue-like things.
     base_dir = /var/spool/simta;
@@ -14,9 +17,8 @@ core {
         ca_file = /etc/pki/tls/certs/ca-bundle.crt;
         # ca_directory = /path/to/dir;
     }
-    # Domain to use for locally generated mail. Defaults to the system
-    # hostname.
-    #masquerade = mx.mail.example.com
+    # Domain to use for locally generated mail.
+    masquerade = $HOSTNAME;
     #
     # Override /etc/resolv.conf (mainly useful for testing)
     #dns {
@@ -37,8 +39,7 @@ core {
         # Tag outbound messages with a poison pill header, and drop inbound
         # messages with a matching header.
         enabled = false;
-        # Defaults to core.masquerade
-        #slug = identifier.example.com
+        slug = $HOSTNAME;
     }
 }
 
@@ -166,8 +167,7 @@ receive {
         # FOREIGN rewrites addresses from other domains.
         # SMART rewrites addresses that would fail SPF on the next hop.
         rewrite = foreign;
-        # Defaults to core.masquerade
-        #domain = example.com
+        domain = $HOSTNAME;
         #secret = theverysecretdiaries;
     }
 
@@ -194,7 +194,7 @@ receive {
 
     arc {
         enabled = false;
-        #domain = example.com;
+        domain = $HOSTNAME;
         #selector = simta;
         #key = /path/to/key;
     }
@@ -216,8 +216,8 @@ receive {
             # added to the message. If ARC is enabled, an ARC header set
             # (including ARC-Authentication-Results) will be added instead.
             enabled = true;
-            # ADMD domain for the header; defaults to masquerade.
-            #domain = example.com;
+            # ADMD domain for the header.
+            domain = $HOSTNAME;
         }
     }
 
@@ -303,8 +303,7 @@ deliver {
     }
     dkim {
         enabled = false;
-        # Defaults to core.masquerade
-        #domain = example.com;
+        domain = $HOSTNAME;
         selector = simta;
         #key = /path/to/key
     }
