config: autoconvert some objects to arrays

--- a/simta.conf
+++ b/simta.conf
@@ -511,8 +511,10 @@ domain "localhost.DEFAULT" {
 #   }
 #   deliver {
 #       secondary_mx = true;
-#       local_delivery = false;
-#       lda = /usr/bin/procmail -f $S;
+#       local {
+#           enabled = false;
+#           agent = /usr/bin/procmail -f $S;
+#       }
 #       tls {
 #           enabled = true;
 #           required = false;
