--- a/simta.conf
+++ b/simta.conf
@@ -14,7 +14,7 @@ core {
     # User to change to after startup
     user = simta;
     tls {
-        ca_file = /etc/pki/tls/certs/ca-bundle.crt;
+        # ca_file = /etc/pki/tls/certs/ca-bundle.crt;
         # ca_directory = /path/to/dir;
     }
     # Domain to use for locally generated mail.
@@ -331,6 +331,9 @@ defaults {
         }
         deliver {
             connection {
+                ipv4 = on;
+                ipv6 = off;
+                port = 25;
                 # Keep reconnecting to MX entries that accepted at least one message.
                 aggressive = true;
                 # Maximum number of messages to attempt per connection
