Add binary delivery test

--- a/test/files/test_simta_delivery.py.conf
+++ b/test/files/test_simta_delivery.py.conf
@@ -1,9 +1,17 @@
+domain "binary.example.com" {
+    rule {
+        type = accept;
+        receive { enabled = true }
+    }
+    deliver local {
+        enabled = true;
+        agent = /bin/true;
+    }
+}
+
 domain "smtpd.example.com" {
-    rule [
-        {
-            type = accept
-            receive { enabled = true }
-            expand { enabled = false }
-        }
-    ]
+    rule {
+        type = accept;
+        receive { enabled = true }
+    }
 }
