Rework group permission logic and add message wrapping

--- a/simta.conf
+++ b/simta.conf
@@ -405,19 +405,45 @@ defaults {
             retries = 2;
             attributes {
                 mail = mail;
-                forwarding = mail;
+                forwarding = mailForwardingAddress;
                 autoreply = onvacation;
                 autoreply_start = umichAutoReplyStart;
                 autoreply_end = umichAutoReplyEnd;
+                moderators = umichReceiveDisallowedMessages;
+                permitted_domains = umichPermittedSendersDomains;
+                permitted_senders = umichPermittedSenders;
                 request = [ * ];
             }
             bind {
                 method = simple;
             }
+
+            # Preface to be included in messages forwarded to moderators.
+            # Supported replacements:
+            #   $n = escaped group name
+            #   $N = group name
+            #   $O = group owner address
+            #   $S = original sender
+            moderation_preface = <<EOD
+You received this message because the settings for the group
+'$N' do not allow messages from $S.
+
+You may wish to:
+
+1. Communicate with the sender.
+
+2. Have someone who is allowed to send messages to this group forward the
+message so that members receive it.
+
+If you believe you have received this message in error, please contact the
+group owner: $O
+EOD
+
             objectclasses {
                 person = [ umichPerson ];
                 group = [ rfc822mailgroup ];
             }
+            permit_moderators = false;
             tls {
                 enabled = false;
                 required = false;
