Fix localhost defaults
Should default to local delivery, like simta<2.x

--- a/simta.conf
+++ b/simta.conf
@@ -428,12 +428,17 @@ defaults {
 
 # Default rules for localhost if there is no explicit config
 domain "localhost.DEFAULT" {
-        rule {
-          type = alias;
+    rule {
+      type = alias;
+    }
+    rule {
+      type = password;
+    }
+    deliver {
+        local {
+            enabled = true;
         }
-        rule {
-          type = password;
-        }
+    }
 }
 
 #domain "example.com" {
