address_string_recipients(): use parse_addr_list()
In addition to being redundant code, the bespoke implementation of
mailbox-list parsing was buggy.

--- a/simta.conf
+++ b/simta.conf
@@ -409,6 +409,7 @@ defaults {
                 autoreply = onvacation;
                 autoreply_start = umichAutoReplyStart;
                 autoreply_end = umichAutoReplyEnd;
+                external_address = rfc822mail;
                 moderators = umichReceiveDisallowedMessages;
                 permitted_domains = umichPermittedSendersDomains;
                 permitted_senders = umichPermittedSenders;
