Refactor dns lists into ACLs
Mostly the same as before except an ACL has a `type`, which can be
DNS or a flat file.

Also reimplement the default user authz setting, which was dropped in
2.0 due to lack of use.

--- a/Makefile.am
+++ b/Makefile.am
@@ -118,7 +118,7 @@ simdmarc_SOURCES = simdmarc.c dmarc.c dmarc.h $(COMMON_FILES)
 simdmarc_LDADD = $(COMMON_LIBS)
 simexpander_SOURCES = simexpander.c $(COMMON_FILES)
 simexpander_LDADD = $(COMMON_LIBS)
-simrbl_SOURCES = simrbl.c $(COMMON_FILES)
+simrbl_SOURCES = simrbl.c simta_acl.c simta_acl.h $(COMMON_FILES)
 simrbl_LDADD = $(COMMON_LIBS)
 simreverse_SOURCES = simreverse.c $(COMMON_FILES)
 simreverse_LDADD = $(COMMON_LIBS)
@@ -128,7 +128,7 @@ simspf_SOURCES = simspf.c $(COMMON_FILES)
 simspf_LDADD = $(COMMON_LIBS)
 simsrs_SOURCES = simsrs.c $(COMMON_FILES)
 simsrs_LDADD = $(COMMON_LIBS)
-simta_SOURCES = daemon.c dmarc.c dmarc.h q_cleanup.c q_cleanup.h receive.c $(COMMON_FILES)
+simta_SOURCES = daemon.c dmarc.c dmarc.h q_cleanup.c q_cleanup.h receive.c simta_acl.c simta_acl.h $(COMMON_FILES)
 simta_LDADD = $(COMMON_LIBS)
 
 dist_man_MANS = simsendmail.1 simc.8 simta.8
