--- a/simta.conf
+++ b/simta.conf
@@ -64,10 +64,10 @@ receive {
     ipv4 = on;
     ipv6 = off;
 
-    # There are several DNS list chains throughout the config, used for authz
+    # There are several ACL chains throughout the config, used for authz
     # at various points in the connection.
     #
-    # Being found on a list will terminate processing of that DNSxL chain
+    # Being found on a list will terminate processing of that ACL chain
     # unless it's a LOG_ONLY list. TRUST is the same as ACCEPT but exempts
     # the connection from checks like MAX_FAILED_RCPTS.
     #
@@ -75,6 +75,8 @@ receive {
     #   # <BLOCK|ACCEPT|TRUST|LOG_ONLY>
     #   action = block;
     #   list = mx-deny.dnsbl;
+    #   # <dns|file>
+    #   type = dns;
     #   message = denied by local policy;
     #   # non-IP chains can mangle the lookup text first. The term is always
     #   # lowercased, then:
@@ -120,8 +122,8 @@ receive {
             message = denied by local policy;
         }
 
-        # DNSxLs to apply to all inbound connections
-        # dns_list []
+        # ACLs to apply to all inbound connections
+        # acl []
 
         banner {
             delay = 0s;
@@ -213,7 +215,10 @@ receive {
             #domain = example.com;
         }
         authz {
-            #dns_list [];
+            # Default authorization state for authenticated users.
+            # <ACCEPT|BLOCK>
+            default = accept;
+            #acl [];
         }
         results {
             # Controls whether an RFC 7001 Authentication-Results header is
@@ -229,16 +234,16 @@ receive {
         # Number of rejected MAIL commands before punishment begins. 0 is
         # unlimited.
         max_failures = 0;
-        # Any DNS lists configured here will also be checked against the
+        # Any ACLs configured here will also be checked against the
         # RFC5322.From during the content filtering phase.
-        #dns_list []
+        #acl []
     }
 
     rcpt_to {
         # These lists apply to the connecting IP, but require user opt-in
         # so they can't be checked until we know the recipient. This is
         # currently only supported for LDAP users.
-        #dns_list []
+        #acl []
         # Number of rejected RCPT commands before punishment begins. 0 is
         # unlimited.
         max_failures = 0;
@@ -267,7 +272,7 @@ receive {
             when = untrusted;
             message = denied by local policy;
             # FIXME: this should be implemented
-            #dns_list []
+            #acl []
         }
     }
 
