Custom messages for denied authn

--- a/simta.conf
+++ b/simta.conf
@@ -218,6 +218,8 @@ receive {
             # Default authorization state for authenticated users.
             # <ACCEPT|BLOCK>
             default = accept;
+            # Default message for disallowed authentication attempts.
+            message = denied by local policy;
             #acl [];
         }
         results {
