Add SPF tests, fix test failures
Major overhaul of SPF processing. RFC compliance requires doing parsing
and evaluation as separate passes, which we were not doing. Mainly
affects which result broken records will receive, but some other bugs
were also fixed.

--- a/simta.conf
+++ b/simta.conf
@@ -176,6 +176,9 @@ receive {
     spf {
         enabled = true;
         strict = false;
+        # Reduce this to 10 if you want to strictly follow the RFCs.
+        query_limit = 25;
+        void_query_limit = 2;
     }
 
     dkim {
