--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
           ldapadd -w DrowsyPapa -D "cn=Manager,dc=example,dc=com" -f ${{ github.workspace }}/simta/test/ldap/data.ldif
 
       - name: Install Python dependencies
-        run: sudo pip install aiosmtpd cryptography pytest
+        run: sudo pip install aiosmtpd cryptography pytest ruamel.yaml
 
       - name: Cache built dependencies
         uses: actions/cache@v3
