Document LDAP subsearches

--- a/simta.conf
+++ b/simta.conf
@@ -528,6 +528,9 @@ domain "localhost.DEFAULT" {
 #           search {
 #               uri = "ldap:///ou=People,dc=umich,dc=edu?*?sub?cn=%25s"
 #               type = user;
+#               # Require that matches also be a member of a specific group.
+#               # In subsearches, %s is the DN of the initial match.
+#               subsearch = "ldap:///ou=User%20Groups,ou=Groups,dc=umich,dc=edu?*?sub?(&(cn=Permitted Users)(member=%25s))"
 #           }
 #           attributes {
 #               request = [];
