cosmetic: update comments

--- a/simta.conf
+++ b/simta.conf
@@ -154,12 +154,19 @@ receive {
     }
 
     timeout {
+        # overall maximum length of a single inbound SMTP session
         session = 1h;
+        # network timeout when initiating TLS
         tls = 5min;
+        # maximum time to keep an idle connection open
         inactivity = 10min;
+        # network timeout for sending replies
         write = 5min;
+        # network timeout for reading commands
         command = 5min;
+        # overall maximum length of the data receipt portion of a single message
         data = 1h;
+        # network timeout for reading a chunk of message data
         data_line = 5min;
     }
 
@@ -299,7 +306,8 @@ receive {
 
 expand {
     # If enabled, simta will expand all messages in the unexpanded queue before
-    # making a delivery attempt.
+    # making a delivery attempt. This allows all messages for a destination
+    # to be bundled together.
     aggressive = true;
 }
 
@@ -311,7 +319,7 @@ deliver {
     jail {
         #host = jail.mail.example.com;
         # alternate recipient for bounces of old jailed messages
-        #parole_officer = acab@example.com
+        #parole_officer = npno@example.com
     }
     dkim {
         enabled = false;
@@ -331,7 +339,7 @@ deliver {
         # max age before messages bounce
         bounce = 3d;
         # messages larger than this will be truncated to just the headers in
-        # the NDR.
+        # the non-delivery report.
         bounce_size = 524288;
     }
 }
@@ -364,7 +372,11 @@ defaults {
                 }
             }
             punt {
+                # If a message cannot be delivered, instead of queueing it for
+                # retry locally send it to a designated host.
                 enabled = false;
+                # punt.always skips the initial delivery attempt and goes
+                # straight to punting.
                 always = false;
                 # host = punt.mail.example.com;
             }
