Add support for multiple certificates

--- a/simta.conf
+++ b/simta.conf
@@ -146,6 +146,8 @@ receive {
         # Enables STARTTLS on normal ports and optionally listens on additional
         # TLS-wrapped ports.
         enabled = false;
+        # certificate and key can be lists, e.g. to load both an RSA certificate
+        # and an ECC certificate.
         #certificate = /path/to/cert;
         #key = /path/to/key;
         ciphers = "EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:DH+CHACHA20:DH+AES128:DH+AES256:!MD5";
