test: fix test failures with cyrus-sasl HEAD
LOGIN is an obsolete draft mechanism that has been removed from the
latest version of cyrus-sasl (and may not always be built in older
versions.)

--- a/test/files/test_simta_sasl.py.conf
+++ b/test/files/test_simta_sasl.py.conf
@@ -7,7 +7,7 @@ receive {
         enabled = true;
         sasl {
             pwcheck_method = auxprop;
-            mech_list = LOGIN PLAIN;
+            mech_list = PLAIN;
             auxprop_plugin = sasldb;
         }
         domain = example.com;
