--- a/test/files/test_simta_tls.py.conf
+++ b/test/files/test_simta_tls.py.conf
@@ -7,7 +7,7 @@ receive {
         enabled = true;
         sasl {
             pwcheck_method = auxprop;
-            mech_list = LOGIN PLAIN;
+            mech_list = PLAIN;
             auxprop_plugin = sasldb;
         }
         domain = example.com;
