--- a/Makefile.am
+++ b/Makefile.am
@@ -66,6 +66,7 @@ COMMON_FILES = \
 	simta_snet.c simta_snet.h \
 	simta_statsd.c simta_statsd.h \
 	simta_ucl.c simta_ucl.h \
+	simta_util.c simta_util.h \
 	smtp.c smtp.h \
 	srs.c srs.h \
 	spf.c spf.h \
@@ -91,7 +92,14 @@ simck_LDADD = $(COMMON_LIBS)
 endif
 
 if BUILD_CMOCKA
-check_PROGRAMS = test/cmocka_dmarc test/cmocka_header test/cmocka_ldap test/cmocka_md test/cmocka_yasl
+check_PROGRAMS = \
+	test/cmocka_dmarc \
+	test/cmocka_header \
+	test/cmocka_ldap \
+	test/cmocka_md \
+	test/cmocka_simta_util \
+	test/cmocka_yasl
+
 test_cmocka_dmarc_LDADD = $(COMMON_LIBS) @CMOCKA_LIBS@
 test_cmocka_dmarc_SOURCES = test/unit_dmarc.c dmarc.c dmarc.h $(COMMON_FILES)
 test_cmocka_header_LDADD = $(COMMON_LIBS) @CMOCKA_LIBS@
@@ -101,6 +109,8 @@ test_cmocka_ldap_LDFLAGS = -Wl,--wrap=ldap_count_entries -Wl,--wrap=ldap_initial
 test_cmocka_ldap_SOURCES = test/unit_ldap.c $(COMMON_FILES)
 test_cmocka_md_LDADD = $(COMMON_LIBS) @CMOCKA_LIBS@
 test_cmocka_md_SOURCES = test/unit_md.c $(COMMON_FILES)
+test_cmocka_simta_util_LDADD = $(COMMON_LIBS) @CMOCKA_LIBS@
+test_cmocka_simta_util_SOURCES = test/unit_simta_util.c $(COMMON_FILES)
 test_cmocka_yasl_LDADD = $(COMMON_LIBS) @CMOCKA_LIBS@
 test_cmocka_yasl_SOURCES = test/unit_yasl.c $(COMMON_FILES)
 endif
